--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,12 @@
 {
     "name": "Video Timer",
-    "version": "22.11.26.1",
+    "version": "23.12.9.1",
     "manifest_version": 3,
-    "description": "YouTubeを40分視聴する毎に10分の休憩時間を設けるChrome拡張。",
+    "description": "動画を40分視聴する毎に10分の休憩時間を設けるChrome拡張。",
     "content_scripts": [{
         "matches": [
-            "https://*.youtube.com/*"
+            "https://*.youtube.com/*",
+            "https://*.tiktok.com/*"
         ],
         "css": [
             "default.css"
