--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Video Timer",
-    "version": "23.12.9.3",
+    "version": "23.12.10.1",
     "manifest_version": 3,
-    "description": "動画を40分視聴する毎に10分の休憩時間を設けるChrome拡張。",
+    "description": "動画を40分視聴する毎に10分の休憩時間を設けます。",
     "permissions": [
         "storage"
     ],
